<resources>
    <string name="app_name">GaweKuy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="onboarding_text">Dapatkan proyek dari berbagai industri, atur jadwal kerja fleksibel, dan tingkatkan penghasilanmu.</string>
    <string name="onboarding_title">Bersiaplah menjadi freelancer!</string>
    <string name="illustration_image">illustration_image</string>
    <string name="ellipse_shape">ellipse_shape</string>
    <string name="login_title">LOGIN</string>
    <string name="login_text">Masuk ke akunmu dan mulai bekerja!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hint_password">Masukkan Password</string>
    <string name="hint_email">Masukkan Email</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="register_title">REGISTER</string>
    <string name="register_text_freelancer">Bergabung dan mulai freelancing hari ini! 🚀</string>
    <string name="register_text_client">Temukan freelancer terbaik untuk proyekmu! 🚀</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="already_have_an_account">Sudah punya akun?</string>
    <string name="dont_have_an_account">Belum punya akun?</string>
    <string name="back_arrow_image">back_arrow_image</string>
    <string name="register_selection">Bagaimana cara kamu ingin bergabung?</string>
    <string name="join_as_client">Gabung sebagai client</string>
    <string name="join_as_freelancer">Gabung sebagai freelancer</string>
    <string name="or">Atau</string>
    <string name="welcome">Selamat Datang</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="hint_full_name">Masukkan Nama Lengkap</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="hint_phone">Masukkan Nomor Telepon</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="save">Simpan</string>
    <string name="setting">Pengaturan</string>
    <string name="light_mode">Mode Terang</string>
    <string name="dark_mode">Mode Gelap</string>
    <string name="notifications">Notifikasi</string>
    <string name="change_visual">Atur Tampilan</string>
    <string name="on">Nyala</string>
    <string name="off">Mati</string>
    <string name="account_status">Status Akun</string>
    <string name="active">Aktif</string>
    <string name="inactive">Tidak Aktif</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="photo_profile">Foto Profil</string>
    <string name="change_photo">Ganti Foto</string>
    <string name="delete_photo">Hapus Foto</string>
    <string name="biography">Biografi</string>
    <string name="write_text_here">Tulis teks di sini...</string>
    <string name="become_freelancer">Menjadi Freelancer</string>
    <string name="are_you_sure_to_become_a_freelancer">Anda yakin ingin menjadi freelancer?</string>
    <string name="exit_account">Keluar Akun</string>
    <string name="are_you_sure_to_exit">Apakah Anda yakin ingin keluar dari akun Anda?</string>
    <string name="cancel">Batal</string>
    <string name="exit">Keluar</string>
    <string name="sure">Yakin</string>
    <string name="not_sure">Tidak Yakin</string>
    <string name="order">Pesanan</string>
    <string name="profile">Profile</string>
    <string name="user">User</string>
    <string name="become_freelancer_opt">Jadi Freelancer?</string>
    <string name="order_history">Riwayat Pesanan</string>
    <string name="favorite_freelancer">Freelancer Favorit</string>
    <string name="app_review">Ulasan Aplikasi</string>
    <string name="minimal_char">Minimal 8 karakter</string>
    <string name="minimal_caps">Minimal 1 huruf kapital</string>
    <string name="minimal_lowercase">Minimal 1 huruf kecil</string>
    <string name="minimal_number">Minimal 1 angka</string>
    <string name="my_service">Jasa Saya</string>
    <string name="status">Status</string>
    <string name="select_your_status">Pilih Status Anda</string>
    <string name="create_new_service">Buat Jasa Baru</string>
    <string name="create_service">Buat Jasa</string>
    <string name="banner_image">Gambar Banner</string>
    <string name="description">Deskripsi</string>
    <string name="service_name">Nama Jasa</string>
    <string name="hint_service_name">Masukkan nama jasa</string>
    <string name="service_selection">Pilihan Layanan</string>
    <string name="select_file">Pilih File</string>
    <string name="no_file_selected">Tidak ada file terpilih</string>
    <string name="delete_service">Hapus Jasa</string>
    <string name="add_service">Tambah Layanan</string>
    <string name="service_name_selection">Nama Layanan</string>
    <string name="price">Harga</string>
    <string name="delete_service_selection">delete_service_selection</string>
    <string name="service_detail">Detail Jasa</string>
    <string name="service_category">Kategori Jasa</string>
    <string name="select_service_category">Pilih kategori jasa</string>
    <string name="tags">Tags</string>
    <string name="add_tags">Tambahkan tags</string>
    <string name="see_portfolio">Lihat Portofolio</string>
    <string name="add_portfolio">Tambahkan Portofolio</string>
    <string name="example">Contoh</string>
    <string name="are_you_sure_to_delete_this_service">Apakah anda yakin ingin menghapus jasa ini?</string>
    <string name="are_you_sure_to_delete_this_portfolio">Apakah anda yakin ingin menghapus portofolio ini?</string>
    <string name="are_you_sure_to_switch_off_account">Apakah anda yakin ingin menonaktifkan akun? Semua jasamu tidak akan tampil di pencarian</string>
    <string name="delete">Hapus</string>
    <string name="order_service">Pesan Jasa</string>
    <string name="price_format">Rp.%s</string>
    <string name="placeholder_empty_service">placeholder_empty_service</string>
    <string name="placeholder_service">Tambahkan jasamu untuk mendapatkan penghasilan</string>
    <string name="placeholder_empty_portfolio">placeholder_empty_portfolio</string>
    <string name="placeholder_portfolio">Tambahkan portofolio anda dengan mengklik tanda tambah</string>
    <string name="placeholder_portfolio_freelancer">Pengguna belum menambahkan portfolio untuk jasa ini</string>
    <string name="search_service">Cari Layanan</string>
    <string name="category">Kategori</string>
    <string name="popular_service">Jasa Populer</string>
    <string name="see_all">Lihat Semua</string>
    <string name="user_profile">Profil Pengguna</string>
    <string name="chat">Chat</string>
    <string name="chat_freelancer">Chat Freelancer</string>
    <string name="my_portfolio">Portofolio Saya</string>
    <string name="title_portfolio">Judul Portofolio</string>
    <string name="detail_portfolio">Detail Portofolio</string>
    <string name="documentation">Dokumentasi</string>
    <string name="portfolio_name">Nama Portofolio</string>
    <string name="portfolio_user">Portofolio Pengguna</string>
    <string name="hint_portfolio_name">Masukkan nama portofolio</string>
    <string name="delete_portfolio">Hapus Portofolio</string>
    <string name="documentation_images">Gambar Dokumentasi</string>
    <string name="add_documentation_images">Tambahkan Dokumentasi</string>
    <string name="portfolio_photo">Foto Portofolio</string>
    <string name="profil_freelancer">Profil Freelancer</string>
    <string name="order_cheap">Dari Termurah</string>
    <string name="order_expensive">Dari Termahal</string>
    <string name="design_desc">Buat desain, ilustrasi, dan video menarik untuk keperluan pribadi, bisnis, atau promosi. Dari logo hingga animasi profesional.</string>
    <string name="academic_desc">Jasa penulisan berkualitas untuk berbagai kebutuhan, mulai dari artikel, atau esai akademik.</string>
    <string name="marketing_desc">Optimalkan strategi pemasaran dan tingkatkan visibilitas bisnis Anda. Dari manajemen media sosial, pembuatan konten, hingga strategi iklan digital.</string>
    <string name="tech_desc">Dapatkan solusi digital inovatif untuk proyek Anda. Mulai dari pengembangan website, aplikasi, hingga kecerdasan buatan dan keamanan siber.</string>
    <string name="others_desc">Jelajahi berbagai layanan unik, fleksibel, dan beragam yang tidak termasuk dalam kategori lain, sesuai dengan kebutuhan Anda.</string>
    <string name="popular_desc">Temukan berbagai jasa terpopuler yang paling diminati oleh pengguna. Dari desain kreatif hingga teknologi mutakhir, semua layanan terbaik ada di sini.</string>
    <string name="load_more">Load More</string>
    <string name="switch_off_account">Menonaktifkan Akun</string>
    <string name="order_detail">Detail Pesanan</string>
    <string name="user_status">Status User</string>
    <string name="resend_verification">Kirim ulang email verifikasi</string>
    <string name="my_payment_option">Opsi Pembayaran Saya</string>
    <string name="bank">Bank</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="bank_option">Pembayaran Bank</string>
    <string name="ewallet_option">Pembayaran E-Wallet</string>
    <string name="bank_name">Nama Bank (contoh: BCA)</string>
    <string name="bank_name_text">Nama Bank</string>
    <string name="bank_name_hint">Masukkan nama Bank</string>
    <string name="ewallet_type_hint">Masukkan nama jenis E-Wallet</string>
    <string name="ewallet_type">Jenis E-Wallet (contoh: DANA)</string>
    <string name="ewallet_type_text">Jenis E-Wallet</string>
    <string name="ewallet_account_name">Nama Akun E-Wallet</string>
    <string name="ewallet_account_name_hint">Masukkan nama di akun E-Wallet Anda</string>
    <string name="ewallet_phone_hint">Masukkan nomor HP E-Wallet</string>
    <string name="ewallet_phone_number">Nomor HP E-Wallet</string>
    <string name="bank_account_number_hint">Masukkan nomor rekening</string>
    <string name="bank_account_number">Nomor Rekening</string>
    <string name="bank_account_name_hint">Masukkan nama di rekening Anda</string>
    <string name="bank_account_name">Nama di Rekening</string>
    <string name="payment_type">Jenis Pembayaran</string>
    <string name="pay_service">Bayar Jasa</string>
    <string name="service_price">Harga Jasa:</string>
    <string name="app_service_price">Biaya Jasa Aplikasi:</string>
    <string name="total_price">Total Tagihan:</string>
    <string name="client">Client</string>
    <string name="freelancer">Freelancer</string>
    <string name="done">Selesai</string>
    <string name="all">Semua</string>
    <string name="user_name">Nama Pengguna</string>
    <string name="selected_service">Pilihan Layanan:</string>
    <string name="selected_service_name">Nama Layanan yang Dipesan</string>
    <string name="send_result">Kirim Hasil</string>
    <string name="in_progress_text">Sedang Dikerjakan</string>
    <string name="reject_order">Tolak</string>
    <string name="accept_order">Terima</string>
    <string name="done_order">Selesaikan Pesanan</string>
    <string name="cancel_order">Batalkan Pesanan</string>
    <string name="title_dialog_done_order">Selesaikan Pesanan</string>
    <string name="message_dialog_done_order">Yakin ingin menyelesaikan pesanan ini?</string>
    <string name="title_dialog_cancel_order">Batalkan Pesanan</string>
    <string name="message_dialog_cancel_order">Anda yakin ingin membatalkan pesanan ini? Uang anda akan kembali dalam 2x24 jam</string>
    <string name="revision_again">Revisi Kembali</string>
    <string name="order_id">ID Pesanan</string>
    <string name="colon">:</string>
    <string name="continue_transaction">Lanjutkan Transaksi</string>
    <string name="pending_transaction">Transaksi Tertunda!!</string>
    <string name="message_dialog_pending_order">Hai, kamu memiliki transaksi yang belum selesai, mohon diselesaikan terlebih dahulu sebelum expired!</string>
</resources>