<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BottomSheetDialogWindow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:orientation="horizontal">

        <ImageButton
            style="@style/BackButton"
            android:id="@+id/btn_back"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:contentDescription="@string/back_arrow_image" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/BottomSheetDialogText.Title"
            android:layout_weight="4"
            android:id="@+id/tv_title"
            android:text="@string/register_title" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        style="@style/BottomSheetDialogText"
        android:id="@+id/tv_text"
        android:text="@string/register_selection" />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonAuth"
        android:id="@+id/btn_register_client"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="12dp"
        android:text="@string/join_as_client" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <com.google.android.material.divider.MaterialDivider
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textAlignment="center"
            app:fontFamily="@font/urbanist_medium"
            android:text="@string/or"
            android:textSize="16sp"/>

        <com.google.android.material.divider.MaterialDivider
            style="@style/Divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonAuth"
        android:id="@+id/btn_register_freelancer"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/join_as_freelancer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/urbanist_medium"
            android:text="@string/already_have_an_account"
            android:textSize="16sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/urbanist_medium"
            android:textColor="@color/blue"
            android:text="@string/login"
            android:textSize="16sp"
            android:layout_marginStart="6dp"/>
    </LinearLayout>

</LinearLayout>