<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    style="@style/CardViewApp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/light_yellow"
            app:cardCornerRadius="48dp"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/tv_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/example"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/dark_yellow"
                android:textSize="12sp"
                app:fontFamily="@font/urbanist_semibold" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_service_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/service_name"
            android:textSize="16sp"
            app:fontFamily="@font/urbanist_bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/user"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:textColor="@color/light_grey"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                app:fontFamily="@font/urbanist_medium"
                android:text="@string/user_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:textColor="@color/light_grey"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                app:fontFamily="@font/urbanist_medium"
                android:text="@string/selected_service" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_selected_service_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center|start"
                android:textColor="@color/light_grey"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                app:fontFamily="@font/urbanist_medium"
                android:text="@string/selected_service_name" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_chat"
            android:visibility="visible"
            style="@style/ButtonAuth.Chat"
            android:layout_marginTop="12dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/chat"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_project"
            android:visibility="visible"
            style="@style/ButtonAuth.Register"
            app:strokeColor="@color/blue"
            app:strokeWidth="2dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/send_result"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_revision"
            android:visibility="visible"
            style="@style/ButtonAuth.Register"
            app:strokeColor="@color/blue"
            app:strokeWidth="2dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/revision_again"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_done_order"
            android:visibility="visible"
            style="@style/ButtonAuth"
            app:strokeColor="@color/blue"
            app:strokeWidth="2dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/done_order"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_order"
            android:visibility="visible"
            style="@style/ButtonAuth.Register"
            app:strokeColor="@color/red"
            app:strokeWidth="2dp"
            android:textColor="@color/red"
            android:layout_marginTop="12dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/cancel_order"/>

        <LinearLayout
            android:id="@+id/ll_button_accept_reject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_accept_project"
                android:visibility="visible"
                style="@style/ButtonAuth"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:strokeColor="@color/blue"
                app:strokeWidth="2dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="4dp"
                android:text="@string/accept_order"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reject_project"
                android:visibility="visible"
                style="@style/ButtonAuth.Register"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:strokeColor="@color/red"
                android:textColor="@color/red"
                app:strokeWidth="2dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="0dp"
                android:text="@string/reject_order"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>